Add first workflow

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,3 +5,17 @@ workflows:
     instance_type: mac_mini_m2
     environment:
       flutter: stable
+    scripts:
+      - name: Set up local.properties
+        script: |
+          echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
+      - name: Get Flutter packages
+        script: |
+          flutter pub get
+      - name: Build apk with Flutter
+        script: |
+          flutter build apk --debug
+    artifacts:
+      - build/**/outputs/**/*.aab
+      - build/**/outputs/**/mapping.txt
+      - flutter_drive.log
